<resources>
    <string name="app_name">Android-SQLite-Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="createa_db_btn">Create Database</string>
    <string name="delete_db_btn">Delete Database</string>
    <string name="select_btn">Sql select</string>
    <string name="insert_btn">Sql insert</string>
    <string name="update_btn">Sql update</string>
    <string name="delete_btn">Sql delete</string>
</resources>
