<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.java_lang_programming.android_sqlite_demo.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/create_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createa_db_btn" />

    <Button
        android:id="@+id/delete_db_btn"
        android:layout_below="@+id/create_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_db_btn" />

    <Button
        android:id="@+id/select_btn"
        android:layout_below="@+id/delete_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_btn" />

    <Button
        android:id="@+id/insert_btn"
        android:layout_below="@+id/select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_btn" />

    <Button
        android:id="@+id/update_btn"
        android:layout_below="@+id/insert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_btn" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_below="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn" />

</RelativeLayout>
